--- a/index.html
+++ b/index.html
@@ -69,25 +69,28 @@
                         <input 
                         type="text"
                         id="name"
-                        placeholder="Enter Name">
+                        placeholder="Enter Name" class="form-input">
 
                         <label for="email">Email</label>
                         <input 
                         type="text"
                         id="email"
-                        placeholder="Enter Email">
+                        placeholder="Enter Email"
+                        class="form-input">
 
                         <label for="password">Password</label>
                         <input 
                         type="password"
                         id="password"
-                        placeholder="Enter Password">
+                        placeholder="Enter Password"
+                        class="form-input">
                        
                         <label for="password2">Confirm Password</label>
                         <input 
                         type="password" 
                         id="password2"
-                        placeholder="Confirm Password">
+                        placeholder="Confirm Password"
+                        class="form-input">
                     </div>
                     <input type="submit" value="Submit" class="submit-btn">
                 </form>
